# helping_hands

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  HELPING_HANDS_E2E.md  INTENT.md  README.md  TODO.md  WAITING_ON.md  compose.yaml  coverage.json  coverage.xml  mkdocs.yml  package-lock.json  prd.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
.vite/vitest/: results.json
completed/: 2026-03-01-docstring-completion-doc-reconciliation.md  2026-03-04-codebase-quality-doc-reconciliation.md  2026-03-04-doc-test-hardening-sprint.md  PRD-2026-03-01-cli-hand-robustness-docstrings-stream-interrupt-tests-doc-reconciliation.md  PRD-2026-03-01-cli-hand-test-coverage-doc-reconciliation.md  PRD-2026-03-01-cli-logging-exception-hardening-doc-reconciliation.md  PRD-2026-03-01-code-quality-exports-doc-reconciliation.md  PRD-2026-03-01-cross-surface-doc-reconciliation.md  PRD-2026-03-01-cross-surface-reconciliation-doc-hygiene.md  PRD-2026-03-01-cross-surface-reconciliation-packaging-polish.md  PRD-2026-03-01-doc-reconciliation-mkdocs-coverage-completeness.md  PRD-2026-03-01-doc-reconciliation-obsidian-sync-cross-surface-audit.md  PRD-2026-03-01-doc-reconciliation-obsidian-sync-final-sweep.md  PRD-2026-03-01-doc-reconciliation-packaging-polish-obsidian-sync.md  PRD-2026-03-01-doc-reconciliation-type-safety-error-logging.md  PRD-2026-03-01-docstring-exports-test-gaps-doc-reconciliation.md  PRD-2026-03-01-dry-git-utils-exception-specificity-doc-reconciliation.md  PRD-2026-03-01-dry-validation-finalize-refactor-doc-reconciliation.md  PRD-2026-03-01-exception-specificity-doc-reconciliation.md  PRD-2026-03-01-export-hardening-cross-surface-doc-reconciliation.md  PRD-2026-03-01-hand-provider-docstring-completion-doc-reconciliation.md  PRD-2026-03-01-iterative-hand-docstrings-cross-surface-reconciliation.md  PRD-2026-03-01-mcp-app-test-hardening-doc-reconciliation.md  PRD-2026-03-01-mkdocs-hand-documentation-expansion.md  PRD-2026-03-01-module-exports-doc-reconciliation-obsidian-sync.md  PRD-2026-03-01-obsidian-completeness-prd-workflow-doc-reconciliation.md  PRD-2026-03-01-package-exports-error-enrichment-doc-reconciliation.md  PRD-2026-03-01-test-coverage-expansion-robustness-hardening.md  PRD-2026-03-01-test-coverage-readme-completeness-doc-reconciliation.md  PRD-2026-03-01-type-safety-docstring-polish-doc-reconciliation.md  PRD-2026-03-01-type-safety-error-handling-provider-tests-doc-reconciliation.md  PRD-2026-03-01-validation-tests-iterative-docstrings-doc-reconciliation.md  PRD-2026-03-04-cli-hand-docstring-completion-doc-reconciliation.md  PRD-2026-03-04-cross-surface-doc-reconciliation-metric-accuracy.md  PRD-api-validation-hardening.md  PRD-production-robustness-e2e-hardening.md  PRD-test-coverage-and-docs-quality.md  PRD.md
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  TROUBLESHOOTING.md  app-mode.md  backends.md  development.md  index.md  prd-hand-world-agent-visibility.md  prd-hand-world-v2.md
docs/completed/: PRD-error-handling-and-observability.md
docs/design-docs/: adding-task-parameters.md  backend-routing.md  ci-pipeline.md  command-execution.md  config-loading.md  core-beliefs.md  default-prompts.md  deployment-modes.md  docker-sandbox.md  e2e-hand-workflow.md  error-handling.md  filesystem-security.md  github-client.md  github-issue-integration.md  hand-abstraction.md  index.md  local-stack.md  mcp-architecture.md  model-resolution.md  multiplayer-hand-world.md  pr-description.md  provider-abstraction.md  repo-indexing.md  repo-selection-ui.md  scheduling-system.md  skills-system.md  task-lifecycle.md  testing-methodology.md  two-phase-cli-hands.md  (+2 more)
examples/: README.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
prompts/: ITERATE.md  SEMANTIC_TEST.md
runs/: README.md
scripts/: install.sh  populate_skills.py  run-local-stack.sh  smoke_test.py  smoke_test.sh
site/: 404.html  index.html  objects.inv
tests/: conftest.py  test_agent.py  test_ai_provider_types.py  test_ai_providers.py  test_ai_providers_package.py  test_anthropic_provider.py  test_atomic_hand.py  test_celery_app.py  test_celery_app_coverage.py  test_celery_app_helpers.py  test_celery_helpers.py  test_claude_new_features.py  test_claude_stream_emitter.py  test_cli.py  test_cli_doctor.py  test_cli_first_run_banner.py  test_cli_hand_base_auth_docstrings.py  test_cli_hand_base_ci.py  test_cli_hand_base_ci_loop.py  test_cli_hand_base_finalize.py  test_cli_hand_base_helpers.py  test_cli_hand_base_hook_fix.py  test_cli_hand_base_invoke.py  test_cli_hand_base_line_prefix_emitter.py  test_cli_hand_base_prompts.py  test_cli_hand_base_render.py  test_cli_hand_base_retry.py  test_cli_hand_base_utils.py  test_cli_hand_claude.py  test_cli_hand_codex.py  test_cli_hand_devin.py  test_cli_hand_gemini.py  test_cli_hand_goose.py  test_cli_hand_opencode.py  test_cli_hand_package_exports.py  test_cli_hands.py  test_command_gaps.py  test_config.py  test_conftest_fixtures.py  test_default_prompts.py  (+228 more)
(+700 files in other folders)
