[project]
name = "helping-hands"
version = "0.1.0"
description = "AI-powered repo builder — point it at a codebase and build features with AI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Surya Rastogi" }]
dependencies = []

[project.optional-dependencies]
langchain = [
    "langchain-openai>=0.3",
    "langgraph>=0.3",
]
atomic = [
    "atomic-agents>=2.7; python_version>='3.12'",
    "instructor>=1.7; python_version>='3.12'",
    "openai>=1.60",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "celery[redis]>=5.4",
    "flower>=2.0",
    "psycopg2-binary>=2.9",
]
mcp = [
    "mcp[cli]>=1.2",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
helping-hands = "helping_hands.cli.main:main"
helping-hands-mcp = "helping_hands.server.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helping_hands"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["helping_hands"]

[tool.ty]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
    "mcp[cli]>=1.2",
]
